# dontpanic

./: .gitignore  Makefile  README.md
components/zstddeclib/: CMakeLists.txt
main/: CMakeLists.txt  hosted_reset.c  html_text.c  html_text.h  idf_component.yml  main.c  screens.c  screens.h  storage.c  storage.h  ui_theme.c  ui_theme.h  wiki.c  wiki.h  wiki_zim.c  wiki_zim.h
sdcard_wiki/h2g2-sampler/: meta.json
sdkconfigs/: tanmatsu
tools/: convert.sh  wiki_pack.py
tools/sample_articles/: Babel Fish.txt  Deep Thought.txt  Earth.txt  Infinite Improbability Drive.txt  Magrathea.txt  Pan Galactic Gargle Blaster.txt  The Guide.txt  Towel.txt  Vogons.txt
